# randata

./: Cargo.toml  README.md
src/: algo.rs  cli.rs  coin_flip.rs  color.rs  commands.rs  dice_roll.rs  ip_addr.rs  main.rs  numbers.rs  shuffle.rs
