[package]
name = "randata"
description = "A command line interface which produces randomized output in different formats."
authors = ["devkevbot"]
readme = "README.md"
keywords = ["cli", "random", "data"]
license = "MIT"
version = "0.4.0"
repository = "https://github.com/devkevbot/randata"
homepage = "https://github.com/devkevbot/randata"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3.22", features = ["derive"]}
rand = "0.8.5"
